fix: :bug: Fix mobile menu z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -383,6 +383,7 @@ picture {
   height: 100%;
   backdrop-filter: blur(5px);
   transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
 }
 
 .overlay {
